Various adjustments
Android Gradle script (bouncycastle->spongycastle)
Wrapper for bouncycastle's Base64 funtionality
Factory-like structure for Ciphers/Algorithms